# libxmlccwrap

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  configure  configure.ac
debian/: changelog  control  copyright  libxmlccwrap-dev.install  libxmlccwrap.install  rules
html/: Makefile.am  Makefile.in  index.html  index.xml
html/pics/: Makefile.am  Makefile.in
testlib/: Makefile.am  Makefile.in  test.xsl  test_badquot.xml  test_badxml.xml  test_data.xml  testlib.cc
xmlccwrap/: Makefile.am  Makefile.in  xmlccwrap.cc
